# tecsci_dipcoater

./: .cproject  .project  README.md
app_proy/: .gitignore
app_proy/app_consola/: .project
app_proy/app_consola_dipcoater/: .cproject  .project  (+1 more)
educiaa_ws/: .gitignore
esp_proy/: .cproject  .project  config.epf
esp_ws/spincoater_esp3_FreeRTOS/: CMakeLists.txt
esp_ws/spincoater_esp3_FreeRTOS/components/api/: command.c  handlers.c  mod_message.c  process.c
esp_ws/spincoater_esp3_FreeRTOS/components/api/include/: command.h  handlers.h  process.h
esp_ws/spincoater_esp3_FreeRTOS/components/protocol_examples_common/: stdin_out.c
esp_ws/spincoater_esp3_FreeRTOS/components/tcm_ic_TMC4671/: CMakeLists.txt  TMC4671.c
esp_ws/spincoater_esp3_FreeRTOS/components/tcm_ic_TMC4671/include/: TMC4671.h  TMC4671_Register.h  TMC4671_Register.h.gch
esp_ws/spincoater_esp3_FreeRTOS/components/tcm_ic_TMC5130/include/: TMC5130.h
esp_ws/spincoater_esp3_FreeRTOS/components/tcm_ramp/: LinearRamp.c
esp_ws/spincoater_esp3_FreeRTOS/components/tmc_comm/: tmc_port.c
esp_ws/spincoater_esp3_FreeRTOS/components/tmc_comm/include/: tmc_port.h
esp_ws/spincoater_esp3_FreeRTOS/components/tmc_eval/: TMC4671_eval.c  TMCL.c
esp_ws/spincoater_esp3_FreeRTOS/components/tmc_eval/include/: TMCL.h
esp_ws/spincoater_esp3_FreeRTOS/components/wifi-manager/: CMakeLists.txt  component.mk
esp_ws/spincoater_esp3_FreeRTOS/components/wifi-manager/include/: dns_server.h
esp_ws/spincoater_esp3_FreeRTOS/main/: spincoater_main.c
esp_ws/spincoater_esp3_FreeRTOS/main/include/: app_main_spincoater.h
(+270 files in other folders)
